--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             .code-highlight { font-size: 1rem; }
         }
 
-        /* 📸 截圖專用樣式 (強制分離樣式) */
+        /* 📸 截圖專用樣式 (強制分離) */
         .screenshot-mode h6 { font-size: 30px !important; padding: 15px !important; }
         .screenshot-mode .fund-name { font-size: 30px !important; line-height: 1.3 !important; }
         .screenshot-mode .fund-sub-info { font-size: 1.8rem !important; line-height: 1.4 !important; }
@@ -84,7 +84,7 @@
         <div class="tab-pane fade show active" id="on-pane">
             <div class="section-header"><span>境內基金查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankOn" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
-            <div class="row g-1 mb-3">
+            <div class="row g-1 mb-3" id="filtersOn">
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onTISA"><label class="form-check-label">TISA</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onPre"><label class="form-check-label">前收</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onPost"><label class="form-check-label">後收</label></div></div>
@@ -98,7 +98,7 @@
             <div id="listOn" class="list-container">載入中...</div>
             <div id="areaOn" style="display:none;">
                 <div id="captureOn" style="background: white; padding: 15px;">
-                    <h6 class="text-center fw-bold mb-2 p-2 rounded" id="titleOn" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
+                    <h6 class="text-center fw-bold mb-2 p-2 rounded title-label" id="titleOn" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
                     <table class="table-custom"><thead><tr><th>基金明細 (幣別 | 類型)</th><th class="code-col">代號</th></tr></thead><tbody id="bodyOn"></tbody></table>
                     <div class="screenshot-footer">下單代號有◎的符號即表示為「目前不接受新申購」，V即表示為「已上架」基金,但是無下單代號</div>
                 </div>
@@ -109,7 +109,7 @@
         <div class="tab-pane fade" id="gsam-pane">
             <div class="section-header"><span>GSAM查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankGsam" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
-            <div class="row g-1 mb-3">
+            <div class="row g-1 mb-3" id="filtersGsam">
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamPre"><label class="form-check-label">前收</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamPost"><label class="form-check-label">後收</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamAcc"><label class="form-check-label">累積</label></div></div>
@@ -125,18 +125,18 @@
             <div id="listGsam" class="list-container">載入中...</div>
             <div id="areaGsam" style="display:none;">
                 <div id="captureGsam" style="background: white; padding: 15px;">
-                    <h6 class="text-center fw-bold mb-2 p-2 rounded" id="titleGsam" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
+                    <h6 class="text-center fw-bold mb-2 p-2 rounded title-label" id="titleGsam" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
                     <table class="table-custom"><thead><tr><th>基金明細 (幣別 | 類型)</th><th class="code-col">代號</th></tr></thead><tbody id="bodyGsam"></tbody></table>
                     <div class="screenshot-footer">下單代號有◎的符號即表示為「目前不接受新申購」，V即表示為「已上架」基金,但是無下單代號</div>
                 </div>
-                <button class="btn btn-shot" onclick="handleScreenshot('captureGsam', 'GSAM下單代號', 10)">📸 拍照截圖 (10筆/頁)</button>
+                <button class="btn btn-shot" onclick="handleScreenshot('captureGsam', 'GSAM下單查詢', 10)">📸 拍照截圖 (10筆/頁)</button>
             </div>
         </div>
 
         <div class="tab-pane fade" id="sicav-pane">
             <div class="section-header"><span>GSAM(SICAV)查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankSicav" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
-            <div class="row g-1 mb-3">
+            <div class="row g-1 mb-3" id="filtersSicav">
                 <div class="col-3"><div class="form-check"><input class="form-check-input sicav-filter" type="checkbox" id="sicavPre"><label class="form-check-label">前收</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input sicav-filter" type="checkbox" id="sicavPost"><label class="form-check-label">後收</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input sicav-filter" type="checkbox" id="sicavAcc"><label class="form-check-label">累積</label></div></div>
@@ -148,7 +148,7 @@
             <div id="listSicav" class="list-container">載入中...</div>
             <div id="areaSicav" style="display:none;">
                 <div id="captureSicav" style="background: white; padding: 15px;">
-                    <h6 class="text-center fw-bold mb-2 p-2 rounded" id="titleSicav" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
+                    <h6 class="text-center fw-bold mb-2 p-2 rounded title-label" id="titleSicav" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
                     <table class="table-custom"><thead><tr><th>基金明細 (幣別 | 類型)</th><th class="code-col">代號</th></tr></thead><tbody id="bodySicav"></tbody></table>
                     <div class="screenshot-footer">下單代號有◎的符號即表示為「目前不接受新申購」，V即表示為「已上架」基金,但是無下單代號</div>
                 </div>
@@ -161,6 +161,11 @@
 <script>
     let dataOn = [], dataGsam = [], dataSicav = [], allBanks = [];
 
+    // Helper: 獲取基金名稱 (相容不同 CSV 標題)
+    function getFundName(row) {
+        return row['基金名稱'] || row['主要基金'] || "";
+    }
+
     function loadCSV(file, callback) {
         Papa.parse(file, {
             download: true, header: true, skipEmptyLines: true,
@@ -170,16 +175,18 @@
         });
     }
 
-    window.onload = function() {
-        loadCSV("on.csv", res => { dataOn = res.data; updateAllBanks(res.meta.fields); refreshSelects(); });
-        loadCSV("off1.csv", res => { dataGsam = res.data; updateAllBanks(res.meta.fields); refreshSelects(); });
-        loadCSV("off2.csv", res => { dataSicav = res.data; updateAllBanks(res.meta.fields); refreshSelects(); });
-    };
-
-    function updateAllBanks(fields) {
-        const banks = fields.filter(f => !['基金名稱','類型','幣別'].includes(f) && f);
+    function updateBankList(fields) {
+        // 排除掉所有可能的元數據欄位，剩下的才是銀行
+        const metaFields = ['基金名稱', '主要基金', '類型', '幣別', '配息', '級別'];
+        const banks = fields.filter(f => !metaFields.includes(f) && f);
         allBanks = [...new Set([...allBanks, ...banks])];
     }
+
+    window.onload = function() {
+        loadCSV("on.csv", res => { dataOn = res.data; updateBankList(res.meta.fields); refreshSelects(); });
+        loadCSV("off1.csv", res => { dataGsam = res.data; updateBankList(res.meta.fields); refreshSelects(); });
+        loadCSV("off2.csv", res => { dataSicav = res.data; updateBankList(res.meta.fields); refreshSelects(); });
+    };
 
     function refreshSelects() {
         const pinned = JSON.parse(localStorage.getItem('pinnedBanks') || "[]");
@@ -202,49 +209,40 @@
         el.value = current;
     }
 
-    // 過濾核心邏輯
+    // 過濾邏輯 (類別內聯集，類別間交集)
     function processFilters(suffix, row, bank, f) {
         const code = String(row[bank] || "").trim();
         if (code === '' || code === 'X' || code === '●') return false;
+        
         const type = row['類型'] || "";
         const curr = row['幣別'] || "";
-        const name = row['基金名稱'] || "";
+        const name = getFundName(row);
 
         if (suffix === 'On' && f.tisa && !name.includes("TISA")) return false;
 
-        // 費用類別並存
+        // 1. 費用類別並存 (前收/後收)
         let feeMatch = true;
         if (f.pre || f.post) {
             feeMatch = false;
-            const preTypes = suffix === 'Sicav' ? ["前收累積", "前收年配", "前收穩定資本月配息"] : (suffix === 'Gsam' ? ["前收累積", "前收月配", "前收年配"] : ["前收累積", "前收月配", "前收季配", "前收半年配"]);
-            const postTypes = ["後收累積", "後收月配", "後收季配"];
-            if (f.pre && preTypes.some(t => type.includes(t))) feeMatch = true;
-            if (f.post && postTypes.some(t => type.includes(t))) feeMatch = true;
+            if (f.pre && type.includes("前收")) feeMatch = true;
+            if (f.post && type.includes("後收")) feeMatch = true;
         }
 
-        // 配息類別並存 (特別針對 Sicav 的交集邏輯)
+        // 2. 配息類別並存 (累積/配息)
         let payoutMatch = true;
         if (f.acc || f.div) {
             payoutMatch = false;
-            if (suffix === 'Sicav') {
-                if (f.pre) {
-                    if (f.acc && type === "前收累積") payoutMatch = true;
-                    if (f.div && ["前收年配", "前收穩定資本月配息"].includes(type)) payoutMatch = true;
-                } else if (f.post) {
-                    if (f.acc && type.includes("累積")) payoutMatch = true;
-                    if (f.div && type.includes("配息")) payoutMatch = true;
-                } else {
-                    if (f.acc && type.includes("累積")) payoutMatch = true;
-                    if (f.div && (type.includes("配息") || type.includes("年配"))) payoutMatch = true;
-                }
+            // 處理 Sicav 的特定組合要求
+            if (suffix === 'Sicav' && f.pre) {
+                if (f.acc && type === "前收累積") payoutMatch = true;
+                if (f.div && ["前收年配", "前收穩定資本月配息"].includes(type)) payoutMatch = true;
             } else {
-                const isDiv = suffix === 'On' ? ["月配", "季配", "半年配"] : ["月配", "年配"];
                 if (f.acc && type.includes("累積")) payoutMatch = true;
-                if (f.div && isDiv.some(s => type.includes(s))) payoutMatch = true;
+                if (f.div && (type.includes("配息") || type.includes("月配") || type.includes("季配") || type.includes("年配"))) payoutMatch = true;
             }
         }
 
-        // 幣別並存
+        // 3. 幣別類別並存
         let currMatch = true;
         const activeCurrs = suffix === 'On' ? ['rmb', 'aud', 'zar', 'jpy'].filter(k => f[k]) : 
                            (suffix === 'Gsam' ? ['jpy', 'usd', 'eur', 'eurh', 'usdh', 'audh', 'zarh'].filter(k => f[k]) :
@@ -274,7 +272,6 @@
         return feeMatch && payoutMatch && currMatch;
     }
 
-    // 渲染函數
     function createRender(suffix, data) {
         return function() {
             const bank = document.getElementById(`bank${suffix}`).value; if (!bank) return;
@@ -297,7 +294,7 @@
 
     function updateUI(suffix, data, bank) {
         const listDiv = document.getElementById(`list${suffix}`);
-        const names = [...new Set(data.map(r => r['基金名稱']))].sort();
+        const names = [...new Set(data.map(r => getFundName(r)))].sort();
         listDiv.innerHTML = `<div class="form-check"><input class="form-check-input" type="checkbox" id="${suffix.toLowerCase()}_all" checked><label class="form-check-label fw-bold">全部顯示 (${names.length})</label></div>`;
         names.forEach((n, idx) => {
             listDiv.innerHTML += `<div class="form-check"><input class="form-check-input chk-${suffix.toLowerCase()}" type="checkbox" value="${n}" id="${suffix.toLowerCase()}_${idx}"><label class="form-check-label" for="${suffix.toLowerCase()}_${idx}">${n}</label></div>`;
@@ -306,12 +303,12 @@
         const items = document.querySelectorAll(`.chk-${suffix.toLowerCase()}`);
         const updateTable = () => {
             const checked = Array.from(document.querySelectorAll(`.chk-${suffix.toLowerCase()}:checked`)).map(c => c.value);
-            let final = (all.checked || checked.length === 0) ? data : data.filter(r => checked.includes(r['基金名稱']));
+            let final = (all.checked || checked.length === 0) ? data : data.filter(r => checked.includes(getFundName(r)));
             document.getElementById(`area${suffix}`).style.display = final.length ? 'block' : 'none';
             document.getElementById(`title${suffix}`).innerText = bank + " 銷售代碼";
             const body = document.getElementById(`body${suffix}`); body.innerHTML = '';
             final.forEach(r => {
-                body.innerHTML += `<tr><td><div class="fund-name">${r['基金名稱']}</div><div class="fund-sub-info">${r['幣別']} | ${r['類型']}</div></td><td class="code-col code-highlight">${r[bank]}</td></tr>`;
+                body.innerHTML += `<tr><td><div class="fund-name">${getFundName(r)}</div><div class="fund-sub-info">${r['幣別']} | ${r['類型']}</div></td><td class="code-col code-highlight">${r[bank]}</td></tr>`;
             });
         };
         all.onclick = () => { if(all.checked) items.forEach(i => i.checked = false); updateTable(); };
