--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             .code-highlight { font-size: 1.05rem; }
         }
 
-        /* 📸 截圖專用巨大化樣式 */
+        /* 📸 截圖專用巨大化樣式 (樣式分離) */
         .screenshot-mode h6.title-label { font-size: 30px !important; padding: 15px !important; }
         .screenshot-mode .fund-name { font-size: 30px !important; line-height: 1.3 !important; }
         .screenshot-mode .fund-sub-info { font-size: 1.8rem !important; line-height: 1.4 !important; }
@@ -44,7 +44,7 @@
         .screenshot-mode .code-col { width: 230px !important; }
         .screenshot-mode table th { font-size: 20px !important; }
 
-        /* 表格與 UI 設定 */
+        /* UI 設定 */
         .table-custom { width: 100%; border-collapse: collapse; background: white; }
         .table-custom thead th { background: var(--primary-blue); color: white; padding: 10px 8px; white-space: nowrap; }
         .table-custom tbody td { padding: 12px 8px; border-bottom: 1px solid #eee; vertical-align: middle; }
@@ -79,6 +79,7 @@
         <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#sicav-pane" type="button">GSAM(SICAV)</button></li>
         <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#ninetyone-pane" type="button">晉達</button></li>
         <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#ireland-pane" type="button">愛爾蘭</button></li>
+        <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#janus-pane" type="button">駿利</button></li>
     </ul>
 
     <div class="tab-content" id="queryTabContent">
@@ -108,7 +109,7 @@
         </div>
 
         <div class="tab-pane fade" id="gsam-pane" role="tabpanel">
-            <div class="section-header"><span>GSAM查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>GSAM查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankGsam" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamPre"><label class="form-check-label">前收</label></div></div>
@@ -208,17 +209,44 @@
                 <button class="btn btn-shot" onclick="handleScreenshot('captureIreland', '愛爾蘭查詢', 10)">📸 拍照截圖 (10筆/頁)</button>
             </div>
         </div>
+
+        <div class="tab-pane fade" id="janus-pane" role="tabpanel">
+            <div class="section-header"><span>駿利下單查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <select id="bankJanus" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
+            <div class="row g-1 mb-3">
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusPre"><label class="form-check-label">前收</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusPost"><label class="form-check-label">後收</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusAcc"><label class="form-check-label">累積</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusDiv"><label class="form-check-label">配息</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusJPY"><label class="form-check-label">日圓</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusUSD"><label class="form-check-label">美元</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusUSDH"><label class="form-check-label">美元避險</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusAUDH"><label class="form-check-label">澳幣避險</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusEUR"><label class="form-check-label">歐元</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusEURH"><label class="form-check-label">歐元避險</label></div></div>
+                <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusCADH"><label class="form-check-label">加幣避險</label></div></div>
+            </div>
+            <div id="listJanus" class="list-container">載入中...</div>
+            <div id="areaJanus" style="display:none;">
+                <div id="captureJanus" style="background: white; padding: 15px;">
+                    <h6 class="text-center fw-bold mb-2 p-2 rounded title-label" id="titleJanus" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
+                    <table class="table-custom"><thead><tr><th>基金明細</th><th class="code-col">代號</th></tr></thead><tbody id="bodyJanus"></tbody></table>
+                    <div class="screenshot-footer">下單代號有◎即表示為「目前不接受新申購」，V即表示為「已上架」基金但無代號</div>
+                </div>
+                <button class="btn btn-shot" onclick="handleScreenshot('captureJanus', '駿利查詢', 10)">📸 拍照截圖 (10筆/頁)</button>
+            </div>
+        </div>
     </div>
 </div>
 
 <script>
-    let datasets = { On: [], Gsam: [], Sicav: [], Ninetyone: [], Ireland: [] };
+    let datasets = { On: [], Gsam: [], Sicav: [], Ninetyone: [], Ireland: [], Janus: [] };
     let allBanks = [];
 
     function getSmartInfo(row) {
         return {
             name: row['基金名稱'] || row['主要基金'] || "未知基金",
-            type: row['類型'] || row['級別'] || "",
+            type: row['類型'] || row['級別'] || row['配息'] || "",
             curr: row['幣別'] || ""
         };
     }
@@ -246,11 +274,12 @@
         loadCSV("off2.csv", "Sicav", () => initPage('Sicav'));
         loadCSV("off3.csv", "Ninetyone", () => initPage('Ninetyone'));
         loadCSV("off4.csv", "Ireland", () => initPage('Ireland'));
+        loadCSV("off5.csv", "Janus", () => initPage('Janus'));
     };
 
     function refreshDropdowns() {
         const pinned = JSON.parse(localStorage.getItem('pinnedBanks') || "[]");
-        ['bankOn', 'bankGsam', 'bankSicav', 'bankNinetyone', 'bankIreland'].forEach(id => {
+        ['bankOn', 'bankGsam', 'bankSicav', 'bankNinetyone', 'bankIreland', 'bankJanus'].forEach(id => {
             const el = document.getElementById(id);
             if (!el) return;
             const cur = el.value;
@@ -269,7 +298,7 @@
     function applyFilters(suffix, row, bank, f) {
         const code = String(row[bank] || "").trim();
         if (code === '' || code === 'X' || code === '●') return false;
-        const { name, type, curr } = getSmartInfo(row);
+        const { type, curr, name } = getSmartInfo(row);
 
         if (suffix === 'On' && f.tisa && !name.includes("TISA")) return false;
 
@@ -285,7 +314,18 @@
         let payoutMatch = true;
         if (f.acc || f.div) {
             payoutMatch = false;
-            if (suffix === 'Ireland' || suffix === 'Ninetyone') {
+            if (suffix === 'Janus') {
+                if (f.pre) {
+                    if (f.acc && type === "前收累積") payoutMatch = true;
+                    if (f.div && ["前收月配", "前收季配", "前收穩月配"].includes(type)) payoutMatch = true;
+                } else if (f.post) {
+                    if (f.acc && type === "後收累積") payoutMatch = true;
+                    if (f.div && type === "後收穩月配") payoutMatch = true;
+                } else {
+                    if (f.acc && type.includes("累積")) payoutMatch = true;
+                    if (f.div && (type.includes("配息") || type.includes("月配") || type.includes("季配"))) payoutMatch = true;
+                }
+            } else if (suffix === 'Ireland' || suffix === 'Ninetyone') {
                 if (f.pre) {
                     if (f.acc && type.includes("前收累積")) payoutMatch = true;
                     if (f.div && type.includes("前收配息")) payoutMatch = true;
@@ -301,31 +341,32 @@
                 if (f.div && ["前收年配", "前收穩定資本月配息"].includes(type)) payoutMatch = true;
             } else {
                 if (f.acc && type.includes("累積")) payoutMatch = true;
-                if (f.div && (type.includes("配息") || type.includes("月配") || type.includes("季配") || type.includes("年配") || type.includes("半年配"))) payoutMatch = true;
+                if (f.div && (type.includes("配息") || type.includes("月配") || type.includes("季配") || type.includes("年配"))) payoutMatch = true;
             }
         }
 
         // 幣別 (並存/聯集)
         let currMatch = true;
-        const activeCurrs = (
-            suffix === 'On' ? ['rmb', 'aud', 'zar', 'jpy'] : 
-            suffix === 'Gsam' ? ['jpy', 'usd', 'eur', 'eurh', 'usdh', 'audh', 'zarh'] : 
-            suffix === 'Sicav' ? ['usdh', 'jpyh', 'audh'] :
-            suffix === 'Ireland' ? ['jpy', 'jpyh', 'zarh', 'usd', 'usdh', 'aud', 'audh'] :
-            ['usd', 'gbp', 'eur', 'usdh', 'audh', 'zarh']
-        ).filter(k => f[k]);
-
+        const activeCurrs = Object.keys(f).filter(k => f[k] && !['tisa', 'pre', 'post', 'acc', 'div'].includes(k));
         if (activeCurrs.length > 0) {
             currMatch = false;
-            if (suffix === 'On') {
+            if (suffix === 'Janus') {
+                if (f.jpy && curr === "日圓") currMatch = true;
+                if (f.usd && curr === "美元") currMatch = true;
+                if (f.usdh && curr.includes("美元避險")) currMatch = true;
+                if (f.audh && curr.includes("澳幣避險")) currMatch = true;
+                if (f.eur && curr === "歐元") currMatch = true;
+                if (f.eurh && curr.includes("歐元避險")) currMatch = true;
+                if (f.cadh && curr.includes("加幣避險")) currMatch = true;
+            } else if (suffix === 'On') {
                 if (f.rmb && curr.includes("人民幣")) currMatch = true;
                 if (f.aud && curr.includes("澳幣")) currMatch = true;
                 if (f.zar && curr.includes("南非幣")) currMatch = true;
                 if (f.jpy && curr.includes("日幣")) currMatch = true;
             } else if (suffix === 'Gsam') {
                 if (f.jpy && curr.includes("日圓")) currMatch = true;
-                if (f.usd && curr.includes("美元")) currMatch = true;
-                if (f.eur && curr.includes("歐元")) currMatch = true;
+                if (f.usd && curr === "美元") currMatch = true;
+                if (f.eur && curr === "歐元") currMatch = true;
                 if (f.eurh && curr.includes("對沖歐元")) currMatch = true;
                 if (f.usdh && curr.includes("對沖美元")) currMatch = true;
                 if (f.audh && curr.includes("對沖澳幣")) currMatch = true;
@@ -357,19 +398,14 @@
     function initPage(suffix) {
         const bankEl = document.getElementById(`bank${suffix}`);
         const filters = document.querySelectorAll(`.${suffix.toLowerCase()}-filter`);
-        
         const update = () => {
             const bank = bankEl.value; if (!bank) return;
             const f = {}; filters.forEach(el => f[el.id.replace(suffix.toLowerCase(),'').toLowerCase()] = el.checked);
             const filtered = datasets[suffix].filter(row => applyFilters(suffix, row, bank, f));
-            
             const listDiv = document.getElementById(`list${suffix}`);
             const names = [...new Set(filtered.map(r => getSmartInfo(r).name))].sort();
             listDiv.innerHTML = `<div class="form-check"><input class="form-check-input" type="checkbox" id="${suffix.toLowerCase()}_all" checked><label class="form-check-label fw-bold">全部顯示 (${names.length})</label></div>`;
-            names.forEach((n, idx) => {
-                listDiv.innerHTML += `<div class="form-check"><input class="form-check-input chk-${suffix.toLowerCase()}" type="checkbox" value="${n}" id="${suffix.toLowerCase()}_${idx}"><label class="form-check-label" for="${suffix.toLowerCase()}_${idx}">${n}</label></div>`;
-            });
-
+            names.forEach((n, idx) => { listDiv.innerHTML += `<div class="form-check"><input class="form-check-input chk-${suffix.toLowerCase()}" type="checkbox" value="${n}" id="${suffix.toLowerCase()}_${idx}"><label class="form-check-label" for="${suffix.toLowerCase()}_${idx}">${n}</label></div>`; });
             const allBtn = document.getElementById(`${suffix.toLowerCase()}_all`), items = document.querySelectorAll(`.chk-${suffix.toLowerCase()}`);
             const refreshTable = () => {
                 const checked = Array.from(document.querySelectorAll(`.chk-${suffix.toLowerCase()}:checked`)).map(c => c.value);
@@ -386,7 +422,6 @@
             items.forEach(i => i.onclick = () => { if(i.checked) allBtn.checked = false; refreshTable(); });
             refreshTable();
         };
-
         bankEl.onchange = update;
         filters.forEach(el => el.onchange = update);
     }
@@ -395,9 +430,7 @@
         const el = document.getElementById(elId);
         const rows = Array.from(el.querySelectorAll('tbody tr'));
         el.classList.add('screenshot-mode');
-        const ow = el.style.width;
-        el.style.width = "900px";
-
+        const ow = el.style.width; el.style.width = "900px";
         if (rows.length <= pageSize) {
             const canvas = await html2canvas(el, { scale: 2, backgroundColor: "#ffffff" });
             save(canvas.toDataURL(), `${name}.png`);
@@ -410,8 +443,7 @@
             }
             rows.forEach(r => r.style.display = '');
         }
-        el.style.width = ow;
-        el.classList.remove('screenshot-mode');
+        el.style.width = ow; el.classList.remove('screenshot-mode');
     }
 
     function save(u, n) { const a = document.createElement('a'); a.download = n; a.href = u; a.click(); }
