--- a/index.html
+++ b/index.html
@@ -24,52 +24,32 @@
         }
         .container { max-width: 850px; width: 95%; margin: auto; }
         
-        /* 🌐 網頁端響應式預覽樣式 (顧問操作時使用) */
+        /* 網頁端響應式預覽樣式 */
         .fund-name { font-size: 1rem; font-weight: bold; line-height: 1.4; }
         .fund-sub-info { font-size: 0.85rem; color: #6c757d; margin-top: 3px; }
         .code-highlight { font-weight: bold; color: var(--danger-red); font-family: 'Consolas', monospace; font-size: 1.15rem; line-height: 1.2; }
-        h6.title-label { font-size: 1.1rem; }
+        h6.title-label { font-size: 1.1rem; font-weight: bold; }
 
         @media (max-width: 576px) {
             .fund-name { font-size: 0.95rem; }
             .code-highlight { font-size: 1rem; }
         }
 
-        /* 📸 截圖輸出專用樣式 (強制分離樣式 - 依照您的最新規範設定) */
-        .screenshot-mode h6.title-label { 
-            font-size: 38px !important; 
-            font-weight: bold !important; 
-            padding: 20px !important; 
-        }
-        .screenshot-mode .fund-name { 
-            font-size: 36px !important; 
-            font-weight: bold !important; 
-            line-height: 1.3 !important; 
-        }
-        .screenshot-mode .fund-sub-info { 
-            font-size: 2rem !important; 
-            font-weight: bold !important; 
-            line-height: 1.4 !important; 
-            color: #444 !important; /* 截圖時子資訊稍微加深顏色以便閱讀 */
-        }
-        .screenshot-mode .code-highlight { 
-            font-size: 2.4rem !important; 
-            font-weight: bold !important; 
-            line-height: 1.2 !important; 
-        }
-        .screenshot-mode .screenshot-footer { 
-            font-size: 1.2rem !important; 
-            font-weight: bold !important; 
-            padding-top: 20px !important; 
-            color: #333 !important;
-        }
-        .screenshot-mode .code-col { width: 350px !important; } /* 加大寬度以容納 2.4rem 的文字 */
-        .screenshot-mode table th { font-size: 22px !important; font-weight: bold !important; }
+        /* ----------------------------------------- */
+        /* 📸 截圖輸出專用巨大化樣式 (所有的截圖統一適用) */
+        /* ----------------------------------------- */
+        .screenshot-mode h6.title-label { font-size: 42px !important; font-weight: bold !important; padding: 20px !important; }
+        .screenshot-mode .fund-name { font-size: 40px !important; font-weight: bold !important; line-height: 1.3 !important; }
+        .screenshot-mode .fund-sub-info { font-size: 2.2rem !important; font-weight: bold !important; line-height: 1.4 !important; color: #555 !important; }
+        .screenshot-mode .code-highlight { font-size: 2.6rem !important; font-weight: bold !important; line-height: 1.2 !important; }
+        .screenshot-mode .screenshot-footer { font-size: 1.6rem !important; font-weight: bold !important; padding-top: 20px !important; }
+        .screenshot-mode .code-col { width: 350px !important; } /* 代號加大後進一步放寬欄位 */
+        .screenshot-mode table th { font-size: 24px !important; font-weight: bold !important; }
 
-        /* 表格排版 */
+        /* 通用表格設定 */
         .table-custom { width: 100%; border-collapse: collapse; background: white; table-layout: auto; }
         .table-custom thead th { background: var(--primary-blue); color: white; padding: 10px 8px; white-space: nowrap; }
-        .table-custom tbody td { padding: 15px 10px; border-bottom: 1px solid #eee; vertical-align: middle; }
+        .table-custom tbody td { padding: 12px 8px; border-bottom: 1px solid #eee; vertical-align: middle; }
         .code-col { text-align: center; width: 140px; }
         
         .nav-tabs .nav-link { border: none; color: #7f8c8d; font-weight: bold; padding: 12px; cursor: pointer; }
@@ -131,7 +111,7 @@
         </div>
 
         <div class="tab-pane fade" id="gsam-pane" role="tabpanel">
-            <div class="section-header"><span>GSAM查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>GSAM查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankGsam" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamPre"><label class="form-check-label">前收</label></div></div>
@@ -268,7 +248,7 @@
     // --- 智慧格式化：處理多組代號斷行 ---
     function formatOrderCode(code) {
         if (!code) return "";
-        let parts = code.split(/\s+/).filter(p => p.trim().length > 0);
+        let parts = String(code).split(/\s+/).filter(p => p.trim().length > 0);
         if (parts.length > 1 && parts.some(p => p.length > 6)) {
             return parts.join("<br>");
         }
@@ -334,7 +314,6 @@
 
         if (suffix === 'On' && f.tisa && !name.includes("TISA")) return false;
 
-        // 費用 (聯集)
         let feeMatch = true;
         if (f.pre || f.post) {
             feeMatch = false;
@@ -342,14 +321,13 @@
             if (f.post && type.includes("後收")) feeMatch = true;
         }
 
-        // 配息/累積 (交集邏輯)
         let payoutMatch = true;
         if (f.acc || f.div) {
             payoutMatch = false;
             if (suffix === 'Janus') {
                 if (f.pre) {
                     if (f.acc && type === "前收累積") payoutMatch = true;
-                    if (f.div && ["前收月配", "前收季配", "前收穩月配"].some(s => type.includes(s))) payoutMatch = true;
+                    if (f.div && ["前收月配", "前收季配", "前收穩月配"].includes(type)) payoutMatch = true;
                 } else if (f.post) {
                     if (f.acc && type === "後收累積") payoutMatch = true;
                     if (f.div && type === "後收穩月配") payoutMatch = true;
@@ -361,7 +339,6 @@
                 if (f.pre) {
                     if (f.acc && type.includes("前收累積")) payoutMatch = true;
                     if (f.div && type.includes("前收配息")) payoutMatch = true;
-                    if (suffix === 'Ireland' && f.div && type.includes("前收月配")) payoutMatch = true;
                 } else if (f.post) {
                     if (f.acc && type.includes("後收累積")) payoutMatch = true;
                     if (f.div && type.includes("後收月配")) payoutMatch = true;
@@ -378,7 +355,6 @@
             }
         }
 
-        // 幣別 (並存/聯集)
         let currMatch = true;
         const activeCurrs = Object.keys(f).filter(k => f[k] && !['tisa', 'pre', 'post', 'acc', 'div'].includes(k));
         if (activeCurrs.length > 0) {
@@ -463,7 +439,7 @@
         const el = document.getElementById(elId);
         const rows = Array.from(el.querySelectorAll('tbody tr'));
         el.classList.add('screenshot-mode');
-        const ow = el.style.width; el.style.width = "1050px"; // 截圖寬度進一步放寬以適應巨大化字體
+        const ow = el.style.width; el.style.width = "1000px"; // 截圖寬度進一步放寬以匹配大字體
         if (rows.length <= pageSize) {
             const canvas = await html2canvas(el, { scale: 2, backgroundColor: "#ffffff" });
             save(canvas.toDataURL(), `${name}.png`);
